New Changesgit push!

--- a/Game.html
+++ b/Game.html
@@ -5,9 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./styles.css"> 
 </head>
 <body>
-    
+    <div class="all-the-text">
+    <p class="context"> Some Context</p>
+    <p class="first-paragraph"> After years of fighting and revolution. </p>
+    <p class="second-paragraph"> Humans and A.I battle came to a halt , when someone told them to settle this issue,</p>
+    <p class="third-paragraph"> With a battle of Rock-Paper-Scissors</p>
+    <p class="play-paragraph"> Now Play!</p>
+    </div>
+
+
+    <div class="buttons">
+        <button> Rock </button>
+        <button> Paper </button>
+        <button> Scissors</button>
+    </div>
+
+    <div class="counters">
+        <p> Human Score :<p id="counter-1">0</p></p>
+        <p> A.I Score :<p id="counter-2">0</p></p>
+    </div>
+
 </body>
 <script src="./script.js"></script>
 </html>
