--- a/Game.html
+++ b/Game.html
@@ -18,9 +18,9 @@
 
 
     <div class="buttons">
-        <button> Rock </button>
-        <button> Paper </button>
-        <button> Scissors</button>
+        <button class="rock"> Rock </button>
+        <button class="paper"> Paper </button>
+        <button class="scissors"> Scissors</button>
     </div>
 
     <div class="counters">
@@ -29,5 +29,5 @@
     </div>
 
 </body>
-<script src="./script.js"></script>
+<script src="./script.js" defer></script>
 </html>
